# Booking_service

./: .env-example  .flake8  Dockerfile  README.md  docker-compose-monitoring.yaml  docker-compose.yaml  docker-compose.yml  prometheus.yml  pyproject.toml  pytest.ini
app/: config.py  database.py  exceptions.py  main.py
app/admin/: auth.py  views.py
app/bookings/: dao.py  exceptions.py  models.py  router.py  schemas.py  service.py
app/dao/: base.py
app/hotels/: dao.py  exceptions.py  models.py  router.py  schemas.py  service.py  shemas.py
app/hotels/rooms/: dao.py  models.py  router.py  shemas.py
app/importer/: router.py
app/migrations/: env.py
app/migrations/versions/: 2b2a0e4fa855_models_room_booking_user.py  58e973ce6b4d_update_user.py  b54c805ec9e8_added_table.py  e27103d356fd_initial.py  fbb3e5900a35_user_confirm_code.py  fc2ff5e0603f_init.py
app/rooms/: dao.py  exceptions.py  models.py  schemas.py
app/smtp/: service.py
app/tasks/: celery.py  email_template.py  tasks.py
app/templates/smtp/: booking_confirmation_template.html  user_confirmation_code.html
app/tests/: conftest.py  mock_hotels.json  mock_rooms.json  mock_users.json
app/tests/integrations_tests/test_bookings/: test_bookings_api.py  test_bookings_dao.py
app/tests/integrations_tests/test_users/: test_users_api.py
app/tests/unit_tests/test_users/: test_users_dao.py
app/users/: auth.py  dao.py  dependencies.py  exceptions.py  hasher.py  models.py  router.py  service.py  shemas.py  utils.py
frontend/src/: App.css  App.js
frontend/src/components/bookings/: Bookings.jsx
frontend/src/components/header/: Header.jsx  Header.module.css
frontend/src/components/login/: Login.jsx  Login.module.css
frontend/src/components/main_page/: MainPage.jsx  MainPage.module.css
infra/: nginx.conf
